tests/NormalTests/paczka1/fuzzy1/42087003.err
Error in line 12: yWUuRIXF9 A79 42,2
Error in line 14: FJkcc0wcx A382 25,3
Error in line 22: 5N5llCp A382 42,5
Error in line 27: yWUuRIXF9 A382 8,85
Error in line 18: G2JtpwazkYk A382 10,9
Error in line 23: r392d S412 29,3
Error in line 28: G2JtpwazkYk S412 62,2
Error in line 26: yWUuRIXF9 A79 69,7
Error in line 31: r392d A79 66,1
